# enrollix

./: README.md
backend/: alembic.ini  pyproject.toml  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 0320e6f57d5a_create_initial_tables.py  16aa7df35a39_add_is_verified_to_user_and_add_email_.py  820ac6683106_rename_password_to_hashed_password.py  93e8e9fc24d3_ajout_du_champ_is_verified_a_la_table_.py
backend/app/: dependencies.py  initial_data.py  main.py
backend/app/core/: config.py
backend/app/crud/: auth.py
backend/app/db/: database.py  security.py
backend/app/models/: __init__.py  academic_year.py  application.py  domaine.py  programme.py  role.py  user.py  user_role.py
backend/app/routers/: auth.py
backend/app/schemas/: user.py
backend/app/utils/: seed_roles.py
backend/scripts/: start_backend.sh
