[project]
name = "enrollix-backend"
version = "0.1.0"
description = "API backend exposant les endpoints nécessaires et gérant la logique métier de l’application."
authors = [
    {name = "tresor-del",email = "tresoradzanto7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
